# hepta-lang

./: .gitignore  Cargo.toml  build.rs  rustfmt.toml
examples/: core.h7  core.mf  name_shadow.h7  numloop.h7
src/: builtins.rs  error.rs  interpreter.rs  main.rs  namespace.rs  scanner.rs  stack.rs  value.rs
src/builtins/: boolean.rs  compare.rs  control_flow.rs  debug.rs  mod.rs  stack.rs
