cargo-features = ["edition"]

[package]
name = "hepta-lang"
version = "0.1.0"
authors = ["Hannes Karppila <hannes.karppila@gmail.com>"]

edition = "2018"

[dependencies]
rustyline = "1.0"
dirs = "1.0"

[build-dependencies]
regex = "1"
crc = "1.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
